syntax = "proto3";

package proto;

service OrderSrv {
    // 获取一个订单的信息
    rpc GetOrder (GetOrderRequest) returns (Order) {
    }
}

// 获取订单的请求信息
message GetOrderRequest {
    int32 id = 1;
}

// 定义订单消息
message Order {
    int32 id = 1;
    string name = 2;
    double price = 3;
    string username = 4;
    string address = 5;
    string phone = 6;
    string createTime = 7;
}

